--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
                             <h3>isActive:</h3>  <span id="Attributes.isActive">Henter ned data</span><br/>
                             -->
                             <h3>Status</h3>  <span id="Attributes.state">Henter ned data</span><br/>
-                            <h3>url:</h3>  <span id="Attributes.url">Henter ned data</span><br/>
                         </p>                        
                     </div>
 
@@ -156,7 +155,7 @@
                             <h3>Eksporttype</h3>  <span id="Descriptions.ExportType">Henter ned data</span>                            
                             <h3>Filstørrelse</h3>  <span id="Size">Henter ned data</span> 
                             <h3>Format</h3>  <span id="Attributes.formats">Henter ned data</span> 
-                            <h3>Kilde</h3>  <span id="Attributes.source">Henter ned data</span> <span id="Api.link"></span><br/>
+                            <h3>Kilde</h3>  <span id="Api.link"></span>
                             <h3>språk</h3>  <span id="Titles.lang">Henter ned data</span>
                             <!--
                             <h3>Kildetype:</h3>  <span id="Creators.sourcetype">Henter ned data</span><br/>
