--- a/index.html
+++ b/index.html
@@ -92,20 +92,13 @@
                     </div>
 
                     <div class="section">
-                        <h2>Beskrivelse av datainnholdet</h2>                    
+                        <h2>Beskrivelse av datainnholdet</h2>      
                         <p>
-                            Denne bolken har midlertidig blitt fjernet fra API'et men vil komme sterkere tilbake senere.
-                            <!--
-                            <h3>Beskrivelse</h3>  <span id="Descriptions.desc">Henter ned data</span><br/>
-                            
-                            <h3>Aktive filtre</h3>  <span id="Descriptions.Filter">Henter ned data</span><br/>
-                            
-                            <h4>Andre parametere</h4>  
-                            Taxon-grupper: <span id="Descriptions.TaxonGroups">Henter ned data</span><br/>
-
-                            <span id="Descriptions.OtherParameters">Henter ned data</span><br/>
-                            Inneholder data i tidsperioden <span id="Descriptions.Years">Henter ned data</span><br/>
-                           -->
+                            Datainnholdet består av et utvalg av elementer fra artskart. Dette utvalget er bygget opp 
+                            av en sammensetning av filtere i form av kategorier og emneknagger (tags).
+                        </p>              
+                        <p>
+                            <span id="Descriptions.Description">Henter ned data</span><br/>
                         </p>
                     </div>
 
