--- a/index.html
+++ b/index.html
@@ -177,9 +177,12 @@
                     -->
 
                     <div class="section">
-                        <h2>Siter datasettet</h2>                    
+                        <h2>Siter datasettet</h2>         
+       
                         <p>
-                            Her må nok ting gjøres for at boksen skal bli nyttig.
+                            <span id="citation">Henter ned data</span><br/>
+                    
+
                             <!--
                             <h3>resourceTypeGeneral:</h3>  <span id="Attributes.types.resourceTypeGeneral">Henter ned data</span><br/>
                             <h3>schemaOrg:</h3>  <span id="Attributes.types.schemaOrg">Henter ned data</span><br/>
@@ -188,6 +191,9 @@
                             <h3>ris:</h3>  <span id="Attributes.types.ris">Henter ned data</span><br/>
                             -->
                         </p>
+                        <p>
+                            Bytt ut "yyyy-mm-dd" med datoen du aksesserte datasettet. I de flest tilfeller vil det være dagens dato.
+                         </p>    
                     </div>
 
  
