--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <h1>DOI landingsside</h1>
                     <span id="timedetails">
                         Opprettet <span id="Time.Created">Henter ned data</span>
-                         | Modifisert <span id="Time.Updated">Henter ned data...</span>
-                         | Gyldiggjort <span id="Time.Valid">Henter ned data</span>
+                         | Oppdatert <span id="Time.Updated">Henter ned data...</span>
+                         | Publisert <span id="Time.Valid">Henter ned data</span>
                     </span>
                 </div>
 
@@ -38,7 +38,7 @@
                     </div>
                     <div class="ingress">
 
-                        <p>Dattasettet er en <span id="Titles.type">Henter ned data</span> fra kildesystemet <span id="Creators.sourcename">kildenavn</span> hos dataleverandøren <span id="publisher">dataleverandør</span>, i <span id="Time.year">Henter ned data</span>. 
+                        <p>Datasettet er en <span id="Titles.type">Henter ned data</span> fra kildesystemet <span id="Creators.sourcename">kildenavn</span> hos dataleverandøren <span id="publisher">dataleverandør</span>, i <span id="Time.year">Henter ned data</span>. 
                     </div>                    
 
                     <div class="section">
@@ -191,9 +191,7 @@
                             <h3>ris:</h3>  <span id="Attributes.types.ris">Henter ned data</span><br/>
                             -->
                         </p>
-                        <p>
-                            Bytt ut "yyyy-mm-dd" med datoen du aksesserte datasettet. I de flest tilfeller vil det være dagens dato.
-                         </p>    
+ 
                     </div>
 
  
