--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     
                 <div class="mid">
                     <div id="nodata">
-                        <p>Fant ingen data</p>                        
+                        <h2>Oversikt </h2>     
+                        <div id="find.doi"></div>                   
                     </div>
                     <div class="ingress">
                         <p>Datasettet er en <span id="Titles.type">Henter ned data</span> fra kildesystemet <span id="Creators.sourcename">kildenavn</span> hos dataleverandøren <span id="publisher">dataleverandør</span>, i <span id="Time.year">Henter ned data</span>. 
