--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                     <div class="section"  id="notyetvalid">
 
                         <h2>Laster inn</h2>                            
-                        <p>
-                            Dette datasettet er ikke helt ferdig ennå, så det kan mangle data nedenfor. Men du kan likevel sniktitte på datane som er tilgjengelige så langt.
+                        <p id="progresstext">
+                            ?
                         </p>
                         <div class="progressbar">
-                            <hr/>
+                            <hr id="progressindicator" />
                             <ul>
-                                <li class="done"><div>1</div><br/><span>Opprettet </span><br/><b id="Time.Created2">-</b></li>
-                                <li class="active"><div>2</div><br/><span>Eksporterer </span><br/><b id="Time.Updated2">-</b></li>
-                                <li class="next"><div>3</div><br/><span>Publisert </span><br/><b id="Time.Valid2">-</b></li>
+                                <li class="next"><div>1</div><br/><span>Bestilt </span><br/><b id="Progress.Submitted">-</b></li>                                
+                                <li class="next"><div>2</div><br/><span>Under arbeid </span><br/><b id="Progress.Created">-</b></li>
+                                <li class="next"><div>3</div><br/><span>Publisert </span><br/><b id="Progress.Valid">-</b></li>
                             </ul>
                         </div>
                     </div>
