header menu works, but needs some visual and textual adjustments

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="https://artsdatabanken.no" class="header-logo">
             <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20973">
         </a>
+        <nav id="headermenu"></nav>
     </div>
 </header>
     <div class="main">
