--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div class="main-content width-adjuster">
             <div class="content-placer">
                 <div class="page-header">
-                    <h1>DOI landingsside</h1>
+                    <h1>Datasett DOI</h1>
+                    <h2 id="header-doi"></h2>
                     <span id="timedetails">
                         Opprettet <span id="Time.Created">-</span>
                          | Oppdatert <span id="Time.Updated">-</span>
@@ -140,13 +141,14 @@
                 <div class="sidebar">
 
                     <div class="section">
-                        <h2>Dattasettet </h2>
+                        <h2>Identifikator </h2>
                             <!--
                             <span id="data.Id">Henter ned data</span> av typen <span id="data.Type">Henter ned data</span></br>
                             <h3>prefix:</h3>  <span id="Attributes.prefix">Henter ned data</span> <br/>
                             <h3>suffix:</h3>  <span id="Attributes.suffix">Henter ned data</span> <br/>
                             <h3>identifiers:</h3>  <span id="Attributes.identifiers">Henter ned data</span><br/>
                             -->
+                        <p>DOI (Digital object identifier) er en ID for et elektronisk dokument</p>
                         <p>
                             <h3>DOI</h3>  <span id="Attributes.doi">Henter ned data</span>
                             <h3>GUID</h3>  <span id="Guid">Henter ned data</span> 
@@ -156,7 +158,7 @@
                             <h3>Status:</h3>  <span id="Descriptions.Status">Henter ned data</span><br/>
                             <h3>isActive:</h3>  <span id="Attributes.isActive">Henter ned data</span><br/>
                             -->
-                            <h3>Status</h3>  <span id="Attributes.state">Henter ned data</span><br/>
+                            
                         </p>                        
                     </div>
 
@@ -167,6 +169,7 @@
                             <h3>Format</h3>  <span id="Attributes.formats">Henter ned data</span> 
                             <h3>Kilde</h3>  <span id="Api.link"></span>
                             <h3>språk</h3>  <span id="Titles.lang">Henter ned data</span>
+                            <h3>Status</h3>  <span id="Attributes.state">Henter ned data</span><br/>
                             <!--
                             <h3>Kildetype:</h3>  <span id="Creators.sourcetype">Henter ned data</span><br/>
                             <h3>version:</h3>  <span id="Attributes.version">Henter ned data</span><br/>
