fixes #15 - nice imageviewer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="page-header">
                     <h1>Datasett DOI</h1>
                     <h2 id="header-doi"></h2>
-                    <span id="timedetails">
+                    <sp#an id="timedetails">
                         Opprettet <span id="Time.Created">-</span>
                          | Oppdatert <span id="Time.Updated">-</span>
                          | Publisert <span id="Time.Valid">-</span>
@@ -90,7 +90,7 @@
                         </p>
                         
                         <p>
-                        <span id="img.appender"></span>
+                        <span id="img.appender" class="sectionimage"></span>
                             Bildet viser kartutsnittet som en rød firkant på norgeskartet, (kilde?) og dataelementene som punkter.
                         </p>
 
