Menu CONTENT almost perfect

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DOI</title>
     <link href="style-reset.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <script src="header.js"></script> 
     <script src="doi-lookup.js"></script> 
     <script src="doi.js"></script> 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
