making menu look like adb header on mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <header class="header">   
     <div class="width-adjuster">
         <a href="https://artsdatabanken.no" class="header-logo">
-            <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20973">
+            <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20973" class="normal">
+            <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20978" class="mobile">
         </a>
         <nav id="headermenu"></nav>
     </div>
