--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20973" class="normal">
             <img  alt="Artsdatabanken" src="https://artsdatabanken.no/Files/20978" class="mobile">
         </a>
+
+           <button id="navbar-mobile" class='material-icons'>menu</button>
+
         <nav id="headermenu"></nav>
     </div>
 </header>
