using classes instead to avoid removing on window resize

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
            <button id="navbar-mobile" class='material-icons'>menu</button>
 
-        <nav id="headermenu"></nav>
+        <nav id="headermenu" class="hide"></nav>
     </div>
 </header>
     <div class="main">
