språk lagt tilbake

--- a/index.html
+++ b/index.html
@@ -192,17 +192,50 @@
                         <span id="img.appender" class="sectionimage"></span>
                             <span class="nb lang-show"> 
                                 Bildet viser kartutsnittet som en rød firkant på norgeskartet, 
-                                (kilde?) og dataelementene som punkter.
-
+                                (kilde?) og dataelementene som punkter. 
+                                Minimumsverdiene for dette datasettet er vestlig lengdegrad 
                             </span>
                             <span class="nn">
                                 Bildet viser kartutsnittet som ein raud firkant på noregskartet, 
                                 (kilde?) og dataelementane som punktar.
+                                Minimumsverdiane for dette datasettet er vestlig lengdegrad   
                             </span>
                             <span class="en">
                                 The image shows the map selection as a red square on the map of Norway
-                                with the data elements as dots.
+                                with the data elements as dots. 
+                                The minimum values for this dataset is westbound Longitude
                             </span>  
+                            <span id="geoLocationBox.westBoundLongitude">-</span>                               
+                            <span class="nb lang-show"> 
+                                , sørlig breddegrad 
+                            </span>
+                            <span class="nn">
+                                , sørlig breddegrad 
+                            </span>
+                            <span class="en">
+                                , southbound Latitude 
+                            </span> 
+                            <span id="geoLocationBox.southBoundLatitude">-</span>
+                            <span class="nb lang-show"> 
+                                og maksimumsverdiene er østlig lengdegrad 
+                            </span>
+                            <span class="nn">
+                                og maksimumsverdiane er austleg lengdegrad 
+                            </span>
+                            <span class="en">
+                                and the maximumvalues eastbound longitude 
+                            </span> 
+                            <span id="geoLocationBox.eastBoundLongitude">-</span>
+                            <span class="nb lang-show"> 
+                                og nordlig breddegrad 
+                            </span>
+                            <span class="nn">
+                                og nordlig breddegrad 
+                            </span>
+                            <span class="en">
+                                 and northbound latitude.
+                            </span> 
+                            <span id="geoLocationBox.northBoundLatitude">-</span>.
                         </p>
                         <span id="area.appender"></span>  
                     </div>
