leftmenu gone, breadcrumbs separated out

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DOI</title>
     <link href="style-reset.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <link href="breadcrumbs.css" rel="stylesheet" />
     <script src="header.js"></script> 
     <script src="footer.js"></script> 
     <script src="doi-lookup.js"></script> 
@@ -27,7 +28,8 @@
 </header>
     <div class="main">
         <div class="main-content width-adjuster">
-            <div class="sidebarmenu">
+
+            <div class="breadcrumbs">
                 <ul>
                     <li class="lead in-breadcrumb">
                         <a href="">
@@ -37,14 +39,11 @@
                         </a>
                     </li>
                     <span id="Attributes.doi" >                     
-                    </span>
-                    
-                    <li class="not-in-breadcrumb">
-                        <a href="https://artskart.artsdatabanken.no/">                            
-                            <span class="nb nn lang-show">Artskart (ekstern lenke)<span class='material-icons'>launch</span> </span>
-                            <span class="en">Species map (external application) <span class='material-icons'>launch</span></span>
-                        </a>                    
+                    </span>     
                 </ul>
+            </div>            
+            <div class="sidebarmenu">
+               
             </div>
 
             <div class="languageselector">                
