--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
 </header>
     <div class="main">
+        
         <div class="main-content width-adjuster">
 
             <div class="breadcrumbs">
@@ -42,9 +43,6 @@
                     </span>     
                 </ul>
             </div>            
-            <div class="sidebarmenu">
-               
-            </div>
 
             <div class="languageselector">                
                 <button id="lang-nb" class="lang-chosen">BOKMÅL</button>
@@ -52,6 +50,7 @@
                 <button id="lang-en" class="lang-not-chosen">ENGLISH</button>
             </div>
 
+            <div class="sidebarmenu"></div>
 
             <div class="content-placer">
                 <div class="page-header">
