image sources added, but not optimally formatted

--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
                             <span class="nb lang-show"> og er et øyeblikksbilde fra da datasettet ble opprettet.</span>
                             <span class="nn"> og er eit augonbliksbilete frå da datasettet blei oppretta.</span>
                             <span class="en"> and is a snapshot of when the dataset was created. </span>         
-                            
 
                         </p>
                     </div>              
@@ -151,7 +150,10 @@
                     </div>
 
                     <div class="section">
-                        <span id="img.appender" class="sectionimage"></span>
+                        <div class="img-container">
+                            <span id="img.appender" class="sectionimage"></span>
+                            <span id="img.source" class="img-source-container"></span>
+                        </div>
                         <P>Beskrivelse av kartbildet kommer her. inkl. kilde og lisens.</P>
                         <p>
                             <span class="nb lang-show"> 
