--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style-reset.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
     <link href="progressbar.css" rel="stylesheet" />
+    <link href="image.css" rel="stylesheet" />
     <script src="header.js"></script> 
     <script src="footer.js"></script> 
     <script src="doi-lookup.js"></script> 
