tags og descriptions progress

--- a/index.html
+++ b/index.html
@@ -151,38 +151,118 @@
                     </div>
 
                     <div class="section">
+                        
                         <div class="img-container">
                             <span id="img.appender" class="sectionimage"></span>
                             <span id="img.source" class="img-source-container"></span>
                         </div>
-                        <P>Beskrivelse av kartbildet kommer her. inkl. kilde og lisens.</P>
-                        <p>
-                            <span class="nb lang-show"> 
-                                Utvalget er bygget opp 
-                                av en sammensetning av filtere i form av kategorier og emneknagger (tags).
+                       
+                        <p class="absence">
+                            <span class="tags_absence tags_case_1">
+                                <span class="nb lang-show"> 
+                                    Eventuelle observasjoner av typene "ikke funnet" og "ikke gjenfunnet" er utelatt fra utvalget.
+                                </span>
+                                <span class="nn"> 
+                                    Eventuelle observasjonar av typane "ikkje funnet" og "ikkje gjenfunnet" er utelatt fra utvalet.
+                                </span>
+                                <span class="en"> 
+                                    Any observations of case "absent" and "not recovered" are excluded from the selection.
+                                </span>
                             </span>
-                            <span class="nn">
-                                Utvalget er bygga opp 
-                                av ei samansetjing av filtera i form av kategoriar og emneknagger (tags).
+
+                            <span class="tags_absence tags_case_2 tags_case_3">
+                                <span class="nb lang-show"> 
+                                    I tillegg til observasjoner av arten, inkluderer utvalget observasjoner av typen 
+                                        <span class="tags_absence tags_case_2">"ikke funnet"</span>. 
+                                        <span class="tags_absence tags_case_3">"ikke gjenfunnet"</span>. 
+                                    Observasjoner av typen                                     
+                                        <span class="tags_absence tags_case_2">"ikke gjenfunnet"</span>. 
+                                        <span class="tags_absence tags_case_3">"ikke funnet"</span>. 
+                                     er ikke inkludert i utvalget.  
+                                </span>
+                                <span class="nn"> 
+                                    I tillegg til observasjonar av arten, inkluderer utvalet observasjonar av typen 
+                                    <span class="tags_absence tags_case_2">"ikkje funnet"</span>. 
+                                    <span class="tags_absence tags_case_3">"ikkje gjenfunnet"</span>. 
+                                Observasjonar av typen                                     
+                                    <span class="tags_absence tags_case_2">"ikkje gjenfunnet"</span>. 
+                                    <span class="tags_absence tags_case_3">"ikkje funnet"</span>. 
+                                 er ikkje inkludert i utvalet. 
+                                </span>
+                                <span class="en"> 
+                                    In addition to observations of the species, the selection includes observations of the type
+                                        <span class="tags_absence tags_case_2">"absent"</span>. 
+                                        <span class="tags_absence tags_case_3">"not recovered"</span>. 
+                                    Observations of the type                                 
+                                        <span class="tags_absence tags_case_2">"not recovered"</span>. 
+                                        <span class="tags_absence tags_case_3">"absent"</span>. 
+                                     is not included in the selection.
+                                </span>
                             </span>
-                            <span class="en">
-                                This selection is generated 
-                                by combining filters for categories and tags.
-                            </span> 
-                        </p>              
-                        <p>
-                            <span id="Descriptions.taxons"> - </span><br/>
+
+                            <span class="tags_absence tags_case_4">
+                                <span class="nb lang-show"> 
+                                    I tillegg til observasjoner av arten, inkluderer utvalget observasjoner av typene "ikke funnet" og "ikke gjenfunnet".
+                                </span>
+                                <span class="nn"> 
+                                    I tillegg til observasjonar av arten, inkluderer utvalet observasjonar av typane "ikkje funnet" og "ikkje gjenfunnet".
+                                </span>
+                                <span class="en"> 
+                                    In addition to observations of the species, the selection includes observations of the types "absent" and "not recovered"
+                                </span>
+                            </span>
+
+                            <span class="tags_absence tags_case_5">
+                                <span class="nb lang-show"> 
+                                    Utvalget inkluderer <b>kun</b> observasjoner av typene "ikke funnet" og "ikke gjenfunnet".  
+                                </span>
+                                <span class="nn"> 
+                                    Utvalet inkluderer <b>kun</b> observasjoner av typane "ikkje funnet" og "ikkje gjenfunnet".  
+                                </span>
+                                <span class="en"> 
+                                    The selection <b>only</b> includes observations of the types "absent" and "not recovered".
+                                </span>
+                            </span>
+
+                            <span class="tags_absence tags_case_6 tags_case_7">
+                                <span class="nb lang-show"> 
+                                    Utvalget inkluderer <b>kun</b> observasjoner av typen
+                                        <span class="tags_absence tags_case_6">"ikke funnet"</span>. 
+                                        <span class="tags_absence tags_case_7">"ikke gjenfunnet"</span>.                                    
+                                </span>
+                                <span class="nn"> 
+                                    Utvalet inkluderer <b>kun</b> observasjoner av typen
+                                        <span class="tags_absence tags_case_6">"ikkje funnet"</span>. 
+                                        <span class="tags_absence tags_case_7">"ikkje gjenfunnet"</span>.   
+                                </span>
+                                <span class="en"> 
+                                    The selection <b>only</b> includes observations of the type
+                                        <span class="tags_absence tags_case_6">"absent"</span>. 
+                                        <span class="tags_absence tags_case_7">"not recovered"</span>. 
+                                </span>
+                            </span>
                         </p>
 
                         <p>
-                            <span id="Descriptions.tags"> - </span><br/>
+                            <span id="Descriptions.taxons"></span>
                         </p>
 
                         <p>
-                            <span id="Descriptions.geometry"> - </span><br/>
+                            <span id="Descriptions.tags"></span>
                         </p>
 
-                        <span id="area.appender"></span>  
+                        <p>
+                            <span id="Descriptions.geometry"></span>
+                        </p>
+                        <p>
+                            <span id="tags_areas">
+                                <span class="nb lang-show"> Utvalget begrenses geografisk av </span>
+                                <span class="nn"> Utvalet begrenses geografisk av </span>
+                                <span class="en"> The selection is limited geographically by </span>
+                            </span>
+                            <span id="Descriptions.area"></span>
+                        </p>
+
                     </div>
                     <br clear="all" />
 
