--- a/index.html
+++ b/index.html
@@ -248,19 +248,30 @@
                         </p>
 
                         <p>
-                            <span id="Descriptions.tags"></span>
+                            <span id="tags_geometry">
+                                <span class="nb lang-show"> Utvalget begrenses av et valgt polygon </span>
+                                <span class="nn"> Utvalet begrenses av eit valgt polygon </span>
+                                <span class="en"> The selection is limited by a selected polygon </span>
+                            </span>
+                            <span id="Descriptions.geometry"></span>
                         </p>
 
                         <p>
-                            <span id="Descriptions.geometry"></span>
-                        </p>
-                        <p>
-                            <span id="tags_areas">
+                            <span id="tags_area">
                                 <span class="nb lang-show"> Utvalget begrenses geografisk av </span>
                                 <span class="nn"> Utvalet begrenses geografisk av </span>
                                 <span class="en"> The selection is limited geographically by </span>
                             </span>
                             <span id="Descriptions.area"></span>
+                        </p>
+
+                        <p>
+                            <span id="tags_other">
+                                <span class="nb lang-show"> Utvalget begrenses av </span>
+                                <span class="nn"> Utvalet begrenses av </span>
+                                <span class="en"> The selection is limited by </span>
+                            </span>
+                            <span id="Descriptions.other"></span>
                         </p>
 
                     </div>
@@ -313,6 +324,26 @@
                         <p>
                             <span id="citation">-</span><br/>
                         </p> 
+                    </div>
+
+                    <div class="section">
+                        <h2>
+                            <span class="nb nn lang-show"> 
+                                Lisens
+                            </span>
+                            <span class="en">
+                                Licence
+                            </span>      
+                        </h2>                    
+                        <p class="licence"> 
+                            <a href="https://creativecommons.org/licenses/by/4.0/"> 
+                                Attribution 4.0 International (CC BY 4.0)  
+
+                            </a>
+                            <br/>
+                            <img src="https://mirrors.creativecommons.org/presskit/icons/cc.png">
+                            <img src="https://mirrors.creativecommons.org/presskit/icons/by.png">
+                        </p>
                     </div>
 
                     <div class="section">
