fixed language bug

--- a/index.html
+++ b/index.html
@@ -304,7 +304,18 @@
                             <span class="en">
                                 elements from 
                             </span>   
-                            <span id="Nr.Sources"> - </span>.
+                            <span id="Nr.Sources"></span> 
+                            
+                            <span class="nb lang-show"> 
+                                dataleverandør<span class="contributor-plural">er</span>.
+                            </span>
+                            <span class="nn"> 
+                                dataleverandør<span class="contributor-plural">ar</span>. 
+                            </span>
+                            <span class="en">
+                                contributor<span class="contributor-plural">s</span>.
+                            </span>
+
                             <span id="doi.appender"></span>      
                         </p>
                     </div>
