split css to separate files for easier re-use from other sites

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOI</title>
     <link href="style-reset.css" rel="stylesheet" />
+    <link href="layout.css" rel="stylesheet" />
+    <link href="header-footer.css" rel="stylesheet" />    
     <link href="style.css" rel="stylesheet" />
     <link href="progressbar.css" rel="stylesheet" />
     <link href="image.css" rel="stylesheet" />
