--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOI</title>
-    <link href="style-reset.css" rel="stylesheet" />
-    <link href="layout.css" rel="stylesheet" />
-    <link href="header-footer.css" rel="stylesheet" />    
+    <link href="https://design.artsdatabanken.no/style/style-reset.css" rel="stylesheet" />
+    <link href="https://design.artsdatabanken.no/style/layout.css" rel="stylesheet" />
+    <link href="https://design.artsdatabanken.no/style/header-footer.css" rel="stylesheet" />    
     <link href="style.css" rel="stylesheet" />
     <link href="progressbar.css" rel="stylesheet" />
     <link href="image.css" rel="stylesheet" />
