header & footer now comes from design resources, not internal stylesheet

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="style.css" rel="stylesheet" />
     <link href="progressbar.css" rel="stylesheet" />
     <link href="image.css" rel="stylesheet" />
-    <script src="header.js"></script> 
-    <script src="footer.js"></script> 
+    <script src="https://design.artsdatabanken.no/script/header.js"></script> 
+    <script src="https://design.artsdatabanken.no/script/footer.js"></script> 
     <script src="doi-lookup.js"></script> 
     <script src="language.js"></script> 
     <script src="doi.js"></script> 
