hide licence until conclusions are availiable at #38

--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
                         </p> 
                     </div>
 
+                    <!-- // Midlertidig kommentert ut i påvente av konklusjoner om lisens.
                     <div class="section">
                         <h2>
                             <span class="nb nn lang-show"> 
@@ -360,6 +361,7 @@
                             <img src="https://mirrors.creativecommons.org/presskit/icons/by.png">
                         </p>
                     </div>
+                    -->
 
                     <div class="section">
                         <h2>
