fixed presentation when missing fields in api

--- a/index.html
+++ b/index.html
@@ -258,11 +258,14 @@
 
                         <p>
                             <span id="tags_geometry">
-                                <span class="nb lang-show"> Utvalget begrenses av et valgt polygon </span>
-                                <span class="nn"> Utvalet begrenses av eit valgt polygon </span>
-                                <span class="en"> The selection is limited by a selected polygon </span>
+                                <span class="nb lang-show"> Utvalget begrenses av et valgt polygon. </span>
+                                <span class="nn"> Utvalet begrenses av eit valgt polygon. </span>
+                                <span class="en"> The selection is limited by a selected polygon. </span>
                             </span>
-                            <span id="Descriptions.geometry"></span>
+                            <!-- 
+                                // TODO: Find better way to show polygon. Hidden untill such a time arrives.
+                                <span id="Descriptions.geometry"></span>
+                            -->
                         </p>
 
                         <p>
